--- a/Views/ItemMaster/itemIndex.cshtml
+++ b/Views/ItemMaster/itemIndex.cshtml
@@ -44,8 +44,8 @@
 
 @*.............List............*@
 
-<table id="tblItem" class="table table-bordered table-striped table-hover">
-    <thead>
+<table id="tblItem" class="flex-column table table-striped-columns">
+    <thead class="text-white bg-dark">
         <tr>
             <th>Item ID</th>
             <th>Item Name</th>
