--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,6 +20,12 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("ItemMaster", "itemIndex", "ItemMaster", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Transactions", "TransactionIndex", "Transactions", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Vendor", "VendorIndex", "Vendor", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Department", "DeptIndex", "Department", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Report", "ReportIndex", "Transactions", new { area = "" }, new { @class = "nav-link" })</li>
+
                 </ul>
             </div>
         </div>
