--- a/Views/Transactions/TransactionIndex.cshtml
+++ b/Views/Transactions/TransactionIndex.cshtml
@@ -14,14 +14,18 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-<script src="~/Content/Pages/ItemMaster.js"></script>
+
+<link href="https://cdn.datatables.net/2.0.7/css/dataTables.dataTables.min.css" rel="stylesheet" />
+<script type="text/javascript" src="https://cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
+
 <script src="~/Content/Pages/Transactions.js"></script>
+<script src="~/Content/Pages/Details.js"></script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Transaction</title>
 
 <div class="row">
-    <form>
+    <div>
         <div class="col-12">
 
             <h5 class="card-title">Transaction</h5>
@@ -35,8 +39,16 @@
             <select type="text" class="form-control" id="ddlItem"></select>
         </div>
         <div class="col-8">
+            <label>Department</label>
+            <select type="text" class="form-control" id="ddldepartment"></select>
+        </div>
+        <div class="col-8">
+            <label>Vendor</label>
+            <select type="text" class="form-control" id="ddlvender"></select>
+        </div>
+        <div class="col-8">
             <label>Transaction Type</label>
-            <select type="text" class="form-control" id="txtT">
+            <select type="text" class="form-control" id="ddltrantype">
                 <option value="I">Issue</option>
                 <option value="P">Purchase</option>
             </select>
@@ -54,7 +66,7 @@
             <button type="submit" onclick="SaveTransaction()" class="btn btn-primary">Submit</button>
         </div>
         <br />
-    </form>
+    </div>
     <section>
 
         <table id="tblTransaction" class="flex-column table table-striped-columns">
@@ -64,7 +76,6 @@
 
 
                     <td class="text-white bg-dark">Transaction_id</td>
-                    <td class="text-white bg-dark">Item_id</td>
                     <td class="text-white bg-dark">Item Name</td>
                     <td class="text-white bg-dark">Vendor_name</td>
                     <td class="text-white bg-dark">Department_name</td>
@@ -79,5 +90,65 @@
         </table>
     </section>
 </div>
+@*<script>
+        $('#tblTransaction').DataTable({
+            "bFilter": true
+        });
+    </script>*@
+
+
+
+<link href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.css" rel="stylesheet" />
+<link href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.css" rel="stylesheet" />
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.html5.min.js"></script>
+<script>
+    var js = jQuery.noConflict(true);
+    js(document).ready(function () {
+        js('#tblTransaction').DataTable({
+            // dom: 'Bfrtip',
+            //buttons: [{
+            //    extend: 'pdf',
+            //    title: 'Stock Report',
+            //    filename: 'Stock Report'
+            //},
+            //    {
+            //        extend: 'excel',
+            //        title: 'Customized EXCEL Title',
+            //        filename: 'Stock Report'
+            //    }, {
+            //        extend: 'csv',
+            //        filename: 'Stock Report'
+            //    },]
+        });
+
+    });
+</script>
+
+<div id="CategoryModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="container" id="Detail">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">CLOSE</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
+
 
 
